tests/files/flow_controller_tests/should_run/075.cmdr
x = 20;
print sec(x);