tests/files/flow_controller_tests/should_fail/053.cmdr
x = "cat";
print sec(x);